--- a/css/style.css
+++ b/css/style.css
@@ -158,7 +158,34 @@ nav {
 }
 
 .stretch {
+  color: white;
   width: 80%;
   height: 100px;
   margin: 0 auto;
+}
+
+.stretch h2 {
+  font-family: 'Abraham Lincoln';
+  font-size: 65px;
+  margin-left: 2%;
+  margin-bottom: 0;
+  float: left;
+  width: 26%;
+  height: 100px;
+  text-align: left;
+}
+
+.stretch p {
+  font-family: 'Poppins';
+  font-weight: lighter;
+  position: relative;
+  top: 120px;
+  right: 44px;
+  float: right;
+  width: 50%;
+  text-align: left;
+  color: white;
+  font-size: 11px;
+  letter-spacing: 1px;
+  word-spacing: 5px;
 }
