--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,3 @@
-body {
-  text-transform: uppercase;
-}
-
 li {
   display: inline;
   list-style-type: none;
@@ -45,7 +41,8 @@ nav {
   margin-bottom: 0;
 }
 
-.first {
+.kiss {
+  text-transform: uppercase;
   height: 1250px;
   background-image: url("../../photoshopLayers/background1.png");
   background-repeat: no-repeat;
@@ -86,7 +83,9 @@ nav {
 }
 
 .scroll p {
+  font-size: 16px;
   margin-top: 0;
+  margin-left: 2px;
 }
 
 .downarrow {
@@ -104,8 +103,8 @@ nav {
 }
 
 .pics {
-  position: relative;
-  left: 13%;
+  margin-left: 13.5%;
+  margin-right: 0;
   z-index: 100;
 }
 
@@ -116,18 +115,19 @@ nav {
 
 .brush-box {
   position: relative;
-  left: 55%;
+  left: 51%;
   z-index: 1000;
   margin: 0 auto;
 }
 
-.second {
+.purpley {
   background-color: #694fca;
   height: 1300px;
   background-repeat: no-repeat;
 }
 
 .invite-text {
+  text-transform: uppercase;
   position: relative;
   top: 9%;
   left: 2%;
@@ -166,6 +166,7 @@ nav {
 
 .stretch h2 {
   font-family: 'Abraham Lincoln';
+  font-weight: lighter;
   font-size: 65px;
   margin-left: 2%;
   margin-bottom: 0;
@@ -182,10 +183,123 @@ nav {
   top: 120px;
   right: 44px;
   float: right;
-  width: 50%;
+  width: 55%;
   text-align: left;
   color: white;
   font-size: 11px;
   letter-spacing: 1px;
   word-spacing: 5px;
+  margin-bottom: 6px;
+}
+
+.align {
+  margin-top: 155px;
+  margin-left: 10%;
+  margin-right: 10%;
+  margin-bottom: 5%;
+}
+
+.align h4 {
+  text-transform: uppercase;
+  font-weight: lighter;
+}
+
+.lefty {
+  position: relative;
+  left: 25px;
+  float: left;
+}
+
+.icon1 {
+  display: block;
+  width: 50px;
+  height: 50px;
+}
+
+.underline {
+  display: block;
+  width: 64px;
+  height: 1px;
+  padding-bottom: 14px
+}
+
+.icon2 {
+  display: block;
+  width: 50px;
+  height: 50px;
+}
+
+.column {
+  font-family: 'Abraham Lincoln';
+  font-size: 20px;
+  color: orange;
+  display: inline-block;
+  width: 30%;
+  margin-top: 100px;
+  padding-left: 12px;
+  padding-right: 12px;
+  text-align: left;
+}
+
+.column p {
+  font-family: 'Poppins';
+  color: white;
+  font-size: 10px;
+}
+
+.righty {
+  position: relative;
+  right: 25px;
+  float: right;
+}
+
+.icon3 {
+  display: block;
+  width: 50px;
+  height: 50px;
+}
+
+.lines {
+  margin-left: 44%;
+
+}
+
+.line1 {
+  width: 44px;
+  height: 6px;
+}
+
+.line2 {
+  width: 44px;
+  height: 6px;
+  padding-left: 14px;
+}
+
+.city {
+  text-align: center;
+  background-image: url("../../photoshopLayers/WeAreUnity.png");
+  background-repeat: no-repeat;
+  background-size: 100%;
+  height: 1000px;
+}
+
+.pride {
+  position: relative;
+  top: 175px;
+}
+
+.pride h1 {
+  font-family: 'Abraham Lincoln';
+  font-weight: lighter;
+  font-size: 80px;
+  margin: 0 auto;
+}
+
+.pride p {
+  font-family: 'Poppins';
+}
+
+.play {
+  position: relative;
+  top: 240px;
 }
