--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 li {
-  display: inline;
+  display: inline-block;
   list-style-type: none;
   color: white;
   padding-left: 30px;
@@ -13,6 +13,10 @@ a {
   text-stroke: 1px solid black;
 }
 
+header {
+  text-align: center;
+}
+
 header h3 {
   font-family: 'Gotham Black';
   font-weight: lighter;
@@ -22,23 +26,26 @@ header h3 {
   border: 2px solid white;
   padding: 8px;
   display: inline-block;
-  margin-top: 15%;
-  margin-left: 43%;
+  margin-top: 231px;
 }
 
 nav {
   font-family: 'Abraham Lincoln';
 }
 
-.firstnav {
-  text-align: center;
+footer {
+  background-color: #231F20;
+  height: 400px;
+}
+
+footer p {
+  margin-top: 0;
 }
 
 .phoneicon {
   float: right;
-  margin-top: 13%;
-  margin-right: 4%;
-  margin-bottom: 0;
+  margin-top: 175px;
+  margin-right: 48px;
 }
 
 .kiss {
@@ -55,37 +62,14 @@ nav {
   font-style: normal;
 }
 
-.honor h1 {
-  text-align: center;
-  color: orange;
-  font-size: 70px;
-  letter-spacing: -0.03em;
-  font-weight: lighter;
-  margin-top: 19%;
-  margin-right: 0;
-}
-
-.honor h2 {
-  color: white;
-  font-weight: lighter;
-  margin: 0 auto;
-  width: 32%;
-}
-
 .scroll {
   color: white;
-  margin-left: 47%;
+  margin-left: 628px;
 }
 
 .arch {
-  margin-top: 10%;
+  margin-top: 62px;
   margin-bottom: 0;
-}
-
-.scroll p {
-  font-size: 16px;
-  margin-top: 0;
-  margin-left: 2px;
 }
 
 .downarrow {
@@ -96,31 +80,28 @@ nav {
 .sidebar {
   transform: rotate(-90deg);
   float: right;
-  position: relative;
-  left: 18%;
-  top: 350px;
-  z-index: 100;
+  margin-top: 270px;
+  margin-right: -241px;
 }
 
 .pics {
-  margin-left: 13.5%;
   margin-right: 0;
-  z-index: 100;
+  margin-left: 182px
 }
 
 .uno {
-  position: relative;
-  left: 6%;
+
 }
 
 .brush-box {
   position: relative;
-  left: 51%;
-  z-index: 1000;
+  bottom: 28px;
+  float: right;
   margin: 0 auto;
+  height: 400px
 }
 
-.purpley {
+.purple-back {
   background-color: #694fca;
   height: 1300px;
   background-repeat: no-repeat;
@@ -129,88 +110,32 @@ nav {
 .invite-text {
   text-transform: uppercase;
   position: relative;
-  top: 9%;
-  left: 2%;
+  top: 110px;
+  left: 434px;
   font-family: 'Abraham Lincoln';
   font-style: normal;
   text-align: center;
   margin-top: 0;
-  margin-left: 30%;
   color: white;
   width: 310px;
   text-align: left;
 }
 
-.invite-text h1 {
-  margin-top: 0;
-  margin-bottom: 0;
-  transform: scaleY(1.4);
-  font-size: 60px;
-  font-weight: lighter;
-}
-
-.invite-text h4 {
-  margin-top: 0;
-  font-size: 20px;
-  font-weight: lighter;
-  width: 410px;
-  letter-spacing: 1.5px;
-}
-
-.stretch {
+.complex-text {
   color: white;
-  width: 80%;
+  width: 1000px;
   height: 100px;
   margin: 0 auto;
-}
-
-.stretch h2 {
-  font-family: 'Abraham Lincoln';
-  font-weight: lighter;
-  font-size: 65px;
-  margin-left: 2%;
-  margin-bottom: 0;
-  float: left;
-  width: 26%;
-  height: 100px;
-  text-align: left;
-}
-
-.stretch p {
-  font-family: 'Poppins';
-  font-weight: lighter;
-  position: relative;
-  top: 120px;
-  right: 44px;
-  float: right;
-  width: 55%;
-  text-align: left;
-  color: white;
-  font-size: 11px;
-  letter-spacing: 1px;
-  word-spacing: 5px;
-  margin-bottom: 6px;
+  margin-top: 427px;
 }
 
 .align {
   margin-top: 155px;
-  margin-left: 10%;
-  margin-right: 10%;
-  margin-bottom: 5%;
+  margin-left: 162px;
+  margin-bottom: 34px;
 }
 
-.align h4 {
-  text-transform: uppercase;
-  font-weight: lighter;
-}
-
-.lefty {
-  position: relative;
-  left: 25px;
-  float: left;
-}
-
-.icon1 {
+.trinity {
   display: block;
   width: 50px;
   height: 50px;
@@ -223,7 +148,7 @@ nav {
   padding-bottom: 14px
 }
 
-.icon2 {
+.grad-cap {
   display: block;
   width: 50px;
   height: 50px;
@@ -234,42 +159,30 @@ nav {
   font-size: 20px;
   color: orange;
   display: inline-block;
-  width: 30%;
+  width: 360px;
   margin-top: 100px;
   padding-left: 12px;
   padding-right: 12px;
   text-align: left;
+  line-height: 24px;
 }
 
-.column p {
-  font-family: 'Poppins';
-  color: white;
-  font-size: 10px;
-}
-
-.righty {
-  position: relative;
-  right: 25px;
-  float: right;
-}
-
-.icon3 {
+.tools {
   display: block;
   width: 50px;
   height: 50px;
 }
 
-.lines {
-  margin-left: 44%;
-
+.line-dash {
+  text-align: center;
 }
 
-.line1 {
+.orange-line {
   width: 44px;
   height: 6px;
 }
 
-.line2 {
+.white-dash {
   width: 44px;
   height: 6px;
   padding-left: 14px;
@@ -283,23 +196,12 @@ nav {
   height: 1000px;
 }
 
-.pride {
+.clients {
   position: relative;
   top: 175px;
 }
 
-.pride h1 {
-  font-family: 'Abraham Lincoln';
-  font-weight: lighter;
-  font-size: 80px;
-  margin: 0 auto;
-}
-
-.pride p {
-  font-family: 'Poppins';
-}
-
-.play {
+.triangle {
   position: relative;
   top: 190px;
 }
@@ -314,10 +216,10 @@ nav {
 .pencils {
   position: relative;
   bottom: 194px;
-  margin-left: 10%;
+  margin-left: 140px;
 }
 
-.pens {
+.pen-box {
   position: relative;
   bottom: 230px;
   left: 149px;
@@ -329,6 +231,292 @@ nav {
   bottom: 674px;
   right: 472px;
   text-align: right;
+}
+
+.number-two {
+  position: relative;
+  left: 345px;
+  float: right;
+  bottom: 150px;
+}
+
+.two-pencils {
+  margin-top: 100px;
+  margin-right: -120px;
+}
+
+.prev-next {
+  margin-top: 210px;
+  margin-left: 532px;
+}
+
+.bloc {
+  position: relative;
+  left: 458px;
+  bottom: 1040px;
+  width: 370px;
+  margin: 0 auto;
+  float: left;
+  line-height: 24px;
+}
+
+.campaign-photography {
+  line-height: 68px;
+}
+
+
+.campaign-creative {
+  font-family: 'Abraham Lincoln';
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  position: relative;
+  right: 280px;
+  float: right;
+  bottom: 1050px;
+  width: 120px;
+  margin: 0 auto;
+}
+
+.photography {
+  font-family: 'Abraham Lincoln';
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  position: relative;
+  left: 10px;
+  float: right;
+  bottom: 1050px;
+  width: 102px;
+  margin: 0 auto;
+}
+
+.winter {
+  background-image: url("../../photoshopLayers/winter.png");
+  height: 1770px;
+  background-repeat: no-repeat;
+  background-size: 100%;
+  margin-top: 0;
+}
+
+.global {
+  font-family: 'Abraham Lincoln';
+  text-align: center;
+  margin-top: 0;
+  position: relative;
+  top: 878px;
+}
+
+.vertical-line {
+  margin-top: 30px;
+  margin-bottom: 30px;
+}
+
+.reviews {
+  position: relative;
+  right: 68px;
+  top: 530px;
+  margin: 0 auto;
+}
+
+.headshots {
+  height: 350px;
+  width: 230px;
+  margin: 0px 10px;
+  border: 1px;
+  float: left;
+  text-align: center;
+  background-color: white;
+}
+
+.even {
+  color: white;
+  background-color: #694fca;
+}
+
+.usa-belgium {
+  color: grey;
+}
+
+.phone-number {
+  font-family: 'Poppins';
+  text-transform: uppercase;
+  position: relative;
+  top: 50px;
+  left: 120px;
+  color: white;
+  font-size: 12px;
+  word-spacing: 3px;
+  width: 210px;
+}
+
+.unity-foot {
+  font-family: 'Gotham Black';
+  font-weight: lighter;
+  letter-spacing: 0.05em;
+  color: white;
+  font-size: 34px;
+  border: 2px solid white;
+  padding: 7px;
+  display: inline-block;
+  margin-top: 0;
+  margin-left: 572px;
+}
+
+.mail {
+  font-family: 'Poppins';
+  text-transform: uppercase;
+  position: relative;
+  top: 25px;
+  right: 188px;
+  font-size: 12px;
+  float: right;
+}
+
+.about-us {
+  font-family: 'Poppins';
+  position: relative;
+  left: 119px;
+  bottom: 20px;
+  width: 480px;
+}
+
+.research {
+  float: left;
+  margin-right: 20px;
+}
+
+.social-media {
+  margin-left: 40px;
+}
+
+.email {
+  font-family: 'Poppins';
+  font-size: 14px;
+  font-weight: lighter;
+  background-color: #231F20;
+  position: relative;
+  bottom: 177px;
+  left: 640px;
+}
+
+.button {
+  font-family: 'Poppins';
+  font-size: 14px;
+  color: white;
+  font-weight: lighter;
+  background-color: #694fca;
+  position: relative;
+  bottom: 144px;
+  left: 475px;
+}
+
+.books {
+  float: right;
+  position: relative;
+  right: 310px;
+  bottom: 278px;
+}
+
+.guy-walking {
+  float: right;
+  position: relative;
+  left: 11px;
+  bottom: 210px;
+}
+
+.skyscraper {
+  float: right;
+  position: relative;
+  left: 322px;
+  bottom: 142px;
+}
+
+.honor h1 {
+  color: orange;
+  font-size: 70px;
+  letter-spacing: -0.03em;
+  font-weight: lighter;
+  margin-top: 234px;
+  margin-left: 299px;
+  margin-right: 0;
+}
+
+.honor h2 {
+  color: white;
+  font-weight: lighter;
+  margin: 0 auto;
+  width: 440px;
+}
+
+.scroll p {
+  font-size: 16px;
+  margin-top: 0;
+  margin-left: 2px;
+}
+
+.invite-text h1 {
+  margin-top: 0;
+  margin-bottom: 16px;
+  transform: scaleY(1.4);
+  font-size: 60px;
+  font-weight: lighter;
+}
+
+.invite-text h4 {
+  margin-top: 0;
+  font-size: 20px;
+  font-weight: lighter;
+  width: 410px;
+  letter-spacing: 1.5px;
+}
+
+.complex-text h2 {
+  font-family: 'Abraham Lincoln';
+  font-weight: lighter;
+  font-size: 65px;
+  margin-left: 44px;
+  margin-bottom: 0;
+  float: left;
+  width: 190px;
+  height: 100px;
+  text-align: left;
+}
+
+.complex-text p {
+  font-family: 'Poppins';
+  font-weight: lighter;
+  position: relative;
+  top: 60px;
+  right: 44px;
+  float: right;
+  width: 560px;
+  text-align: left;
+  color: white;
+  font-size: 11px;
+  letter-spacing: 1px;
+  word-spacing: 5px;
+  line-height: 24px;
+}
+
+.align h4 {
+  text-transform: uppercase;
+  font-weight: lighter;
+}
+
+.column p {
+  font-family: 'Poppins';
+  color: white;
+  font-size: 10px;
+}
+
+.clients h1 {
+  font-family: 'Abraham Lincoln';
+  font-weight: lighter;
+  font-size: 80px;
+  margin: 0 auto;
+}
+
+.clients p {
+  font-family: 'Poppins';
 }
 
 .details h1 {
@@ -344,31 +532,6 @@ nav {
   margin: 0 auto;
 }
 
-.number-two {
-  position: relative;
-  left: 70%;
-  bottom: 150px;
-}
-
-.two-pencils {
-  margin-bottom: 4%;
-  margin-right: 10%;
-}
-
-.prev-next {
-  margin-top: 8%;
-  margin-left: 40%;
-}
-
-.bloc {
-  position: relative;
-  left: 34%;
-  bottom: 1040px;
-  width: 370px;
-  margin: 0 auto;
-  float: left;
-}
-
 .bloc h1 {
   font-family: 'Abraham Lincoln';
   font-weight: lighter;
@@ -376,8 +539,8 @@ nav {
   text-transform: uppercase;
   position: relative;
   margin-bottom: 15px;
+  margin-top: 50px;
   font-size: 54px;
-  z-index: 200;
 }
 
 .bloc p {
@@ -389,62 +552,26 @@ nav {
   margin-top: 0;
 }
 
-
-.campaign-creative {
-  font-family: 'Abraham Lincoln';
-  text-transform: uppercase;
-  letter-spacing: 1px;
-  position: relative;
-  right: 21.5%;
-  float: right;
-  bottom: 1024px;
-  width: 120px;
-  margin: 0 auto;
-}
-
 .campaign-creative p {
   margin-bottom: 50px;
-}
-
-.photography {
-  font-family: 'Abraham Lincoln';
-  text-transform: uppercase;
-  letter-spacing: 1px;
-  position: relative;
-  left: 1%;
-  float: right;
-  bottom: 1024px;
-  width: 102px;
-  margin: 0 auto;
 }
 
 .photography p {
   margin-bottom: 50px;
 }
 
-.winter {
-  background-image: url("../../photoshopLayers/winter.png");
-  height: 1770px;
-  background-repeat: no-repeat;
-  background-size: 100%;
-  margin-top: 0;
+.global p {
+  font-family: 'Poppins';
+  font-weight: lighter;
 }
 
-.fif {
-  font-family: 'Abraham Lincoln';
-  text-align: center;
-  margin-top: 0%;
-  position: relative;
-  top: 49.5%;
-}
-
-.fif h1 {
+.global h1 {
   text-transform: uppercase;
   font-size: 65px;
   letter-spacing: 4px;
 }
 
-.fif h2 {
+.global h2 {
   font-weight: lighter;
   text-transform: uppercase;
   letter-spacing: 2px;
@@ -453,109 +580,12 @@ nav {
   word-spacing: 2px;
 }
 
-.black-line {
-  margin-top: 30px;
-  margin-bottom: 30px;
-}
-
-.fif p {
-  font-family: 'Poppins';
-  font-weight: lighter;
-}
-
-.stars {
-  position: relative;
-  right: 5%;
-  top: 34%;
-  margin: 0 auto;
-}
-
-.area {
-  height: 350px;
-  width: 230px;
-  margin: 0px 10px;
-  border: 1px;
-  float: left;
-  text-align: center;
-}
-
-.area p {
+.headshots p {
   font-size: 13px;
   margin-left: 0;
   margin-right: 0;
   margin-top: 10px;
   margin-bottom: 5px;
-}
-
-.white {
-  background-color: white;
-}
-
-.center {
-  color: white;
-  background-color: #694fca;
-}
-
-.center h4, .jon {
-  color: orange;
-}
-
-.grey {
-  color: grey;
-}
-
-.footer {
-  background-color: #231F20;
-  height: 400px;
-}
-
-.footer p {
-  margin-top: 0;
-}
-
-.phone-number {
-  font-family: 'Poppins';
-  text-transform: uppercase;
-  position: relative;
-  top: 50px;
-  left: 120px;
-  color: white;
-  font-size: 12px;
-  word-spacing: 3px;
-  width: 210px;
-}
-
-.phone-number .tinyphone {
-  float: left;
-  margin-right: 10px;
-}
-
-.unity-foot {
-  font-family: 'Gotham Black';
-  font-weight: lighter;
-  letter-spacing: 0.05em;
-  color: white;
-  font-size: 34px;
-  border: 2px solid white;
-  padding: 7px;
-  display: inline-block;
-  margin-top: 0;
-  margin-left: 43%;
-}
-
-.mail {
-  font-family: 'Poppins';
-  text-transform: uppercase;
-  position: relative;
-  top: 25px;
-  right: 188px;
-  font-size: 12px;
-  float: right;
-}
-
-.mail .tinymail {
-  float: left;
-  margin-right: 10px;
 }
 
 .mail p {
@@ -564,27 +594,9 @@ nav {
   margin-right: 10px;
 }
 
-.mail .purple-mail {
-  color: #694fca;
-  float: right;
-}
-
-.about-us {
-  font-family: 'Poppins';
-  position: relative;
-  left: 10%;
-  bottom: 10%;
-  width: 480px;
-}
-
 .about-us h4 {
   text-transform: uppercase;
   color: white;
-}
-
-.research {
-  float: left;
-  margin-right: 20px;
 }
 
 .about-us p {
@@ -592,10 +604,6 @@ nav {
   font-size: 10px;
   width: 470px;
   margin-right: 0;
-}
-
-.social-media {
-  margin-left: 40px;
 }
 
 .newsletter h4 {
@@ -622,27 +630,6 @@ nav {
   width: 200px;
 }
 
-.email {
-  font-family: 'Poppins';
-  font-size: 14px;
-  font-weight: lighter;
-  background-color: #231F20;
-  position: relative;
-  bottom: 177px;
-  left: 640px;
-}
-
-.button {
-  font-family: 'Poppins';
-  font-size: 14px;
-  color: white;
-  font-weight: lighter;
-  background-color: #694fca;
-  position: relative;
-  bottom: 144px;
-  left: 475px;
-}
-
 .blog h4 {
   font-family: 'Poppins';
   text-transform: uppercase;
@@ -654,13 +641,6 @@ nav {
   left: 348px;
   width: 140px;
   margin: 0 auto;
-}
-
-.books {
-  float: right;
-  position: relative;
-  right: 310px;
-  bottom: 278px;
 }
 
 .need h5 {
@@ -685,14 +665,7 @@ nav {
   left: 44px;
 }
 
-.dude {
-  float: right;
-  position: relative;
-  left: 11px;
-  bottom: 210px;
-}
-
-.dudely h5 {
+.guy h5 {
   font-family: 'Poppins';
   font-size: 10px;
   letter-spacing: 1px;
@@ -704,7 +677,7 @@ nav {
   left: 277px;
 }
 
-.dudely p {
+.guy p {
   font-family: 'Poppins';
   color: #694fca;
   font-size: 10px;
@@ -712,13 +685,6 @@ nav {
   position: relative;
   bottom: 185px;
   left: 355px;
-}
-
-.skyscraper {
-  float: right;
-  position: relative;
-  left: 322px;
-  bottom: 142px;
 }
 
 .tall-building h5 {
@@ -741,4 +707,23 @@ nav {
   position: relative;
   bottom: 114px;
   left: 738px;
+}
+
+.phone-number .tinyphone {
+  float: left;
+  margin-right: 10px;
+}
+
+.mail .purple-mail {
+  color: #694fca;
+  float: right;
+}
+
+.mail .tinymail {
+  float: left;
+  margin-right: 10px;
+}
+
+.even h4, .jon {
+  color: orange;
 }
