--- a/css/styles.css
+++ b/css/styles.css
@@ -7,17 +7,7 @@ article {
 }
 
 footer {
-  padding-left: 10%;
-  padding-right: 10%;
-}
-
-.aboutus-breadcrumb h2 {
-  margin-left: 100%;
-  width: 100%;
-}
-
-.breadcrumb a {
-  color: #C6D4D6;
+  padding: 5% 10%;
 }
 
 .header-hr {
@@ -208,8 +198,10 @@ footer {
 
 .aboutus-main {
   text-align: center;
-  margin-left: 15%;
-  margin-right: 15%;
+  margin-left: 20%;
+  margin-right: 20%;
+  margin-bottom: 14%;
+  margin-top: 10%;
 }
 
 .gold-aboutus {
@@ -220,16 +212,60 @@ footer {
   font-weight: bold;
 }
 
+.john-doe {
+  width: 93%;
+  margin-left: 4%;
+}
+
+.founder {
+  font-size: 13px;
+  color: #E2E1E1;
+}
+
+.icon-picture-1 {
+  font-size: 275%;
+  color: gray;
+  background-color: #C6D4D6;
+  border-radius: 100%;
+  height: 160px;
+  width: 76%;
+  padding-top: 20%;
+  padding-right: 7%;
+  margin-left: 9%;
+  margin-bottom: 12%;
+}
+
+.second-page-cards {
+  padding-bottom: 4%;
+}
+
 footer p {
   font-size: 13px;
 }
 
-.aboutus-main p {
-  color: gray;
+.aboutus-breadcrumb h2 {
+  margin-left: 100%;
+  width: 100%;
+}
+
+.breadcrumb a {
+  color: #C6D4D6;
 }
 
 .page-header h1 {
   text-transform: uppercase;
+}
+
+.aboutus-main h1 {
+  text-transform: uppercase;
+  font-family: "Open-Sans";
+  letter-spacing: 4px;
+}
+
+.aboutus-main p {
+  font-family: "Open-Sans";
+  color: #D0D0D0;
+  font-style: italic;
 }
 
 .border-cards p {
