--- a/css/aboutus.css
+++ b/css/aboutus.css
@@ -58,10 +58,6 @@ footer {
   margin-right: 18%;
 }
 
-.gold-text {
-  color: tan;
-}
-
 .breadcrumb {
   font-size: 14px;
   width: 35%;
@@ -86,6 +82,10 @@ footer {
   color: #DEB25B;
 }
 
+.gold-text {
+  color: tan;
+}
+
 .bold-p {
   font-weight: bold;
 }
@@ -96,13 +96,15 @@ footer {
 
 .first-page-cards {
   padding-top: 2%;
-  width: 80%;
+  width: 76%;
   margin-left: 11%;
+  margin-bottom: 4%;
 }
 
 .john-doe {
-  width: 93%;
-  margin-left: 4%;
+  width: 86%;
+  margin-left: 6%;
+  padding-top: 4%;
 }
 
 .founder {
@@ -153,6 +155,7 @@ footer p {
 .aboutus-breadcrumb h2 {
   margin-left: 100%;
   width: 100%;
+  color: tan;
 }
 
 .breadcrumb a {
