--- a/css/services.css
+++ b/css/services.css
@@ -1,5 +1,6 @@
 select {
-  margin-top: 6%;
+  margin-top: 12%;
+  margin-left: -33%;
 }
 
 footer {
@@ -10,39 +11,34 @@ footer {
   padding-top: 2%;
 }
 
+.toptop {
+  margin-left: 20%;
+}
+
 .email-top {
   margin-top: 2%;
+  margin-right: -7%;
 }
 
 .phone-top {
   margin-top: 2%;
+  margin-right: -4%;
 }
 
 .login-button {
-  margin-left: 78%;
-  margin-top: 7%;
+  margin-right: -13%;
+  margin-top: 2%;
 }
 
 .language-button {
-  margin-left: 36%;
-  padding-left: 18%;
-  padding-right: 18%;
-  margin-top: 7%;
+  margin-top: 2%;
+  margin-right: -11%
 }
 
 .social-networking {
   padding: 0;
-  margin-top: 1%;
-  margin-right: 4%;
-}
-
-.social-link {
-  padding-left: 1%;
-  padding-right: 1%;
-}
-
-.icon-search {
-  margin-right: 18%;
+  margin-top: 2%;
+  margin-right: -3%;
 }
 
 .gold-text {
