--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,6 @@
 select {
-  margin-top: 6%;
+  margin-top: 12%;
+  margin-left: -33%;
 }
 
 hr {
@@ -76,7 +77,8 @@ footer {
 }
 
 .widgets {
-  margin-left: -24%;
+  margin-left: 76%;
+  margin-top: -46%;
 }
 
 .icon-hospital {
@@ -85,16 +87,15 @@ footer {
 }
 
 .hotel-tab {
-  margin-left: 15%;
-  width: 8%;
+  width: 11%;
+  margin-left: 5%;
   padding-top: 1%;
   padding-left: 1%;
   padding-bottom: 1%;
 }
 
 .booking {
-  width: 70%;
-  margin-left: 15%;
+  margin-left: 5%;
   margin-bottom: 3%;
   padding-left: 1%;
   padding-right: 1%;
@@ -209,4 +210,8 @@ footer p {
 
 .border-cards h5 {
   margin-top: 9%;
+}
+
+@media (min-width: 576) {
+  
 }
