--- a/css/styles.css
+++ b/css/styles.css
@@ -63,6 +63,11 @@ footer {
   margin-right: -3%;
 }
 
+.icon-search {
+  float: right;
+  margin-top: -5%;
+}
+
 .explore-button {
   padding: 1% 3%;
   text-transform: uppercase;
@@ -74,6 +79,7 @@ footer {
 
 .jumbotron {
   margin-left: 12%;
+  margin-bottom: 12%;
 }
 
 .widgets {
@@ -202,6 +208,7 @@ footer p {
 
 .page-header h1 {
   text-transform: uppercase;
+  margin-bottom: 24%;
 }
 
 .border-cards p {
@@ -212,6 +219,88 @@ footer p {
   margin-top: 9%;
 }
 
-@media (min-width: 576) {
-  
+@media (max-width: 576px) {
+  .container-fluid {
+    padding: 0;
+  }
+
+  .toptop {
+    margin-left: 0;
+  }
+
+  .navbar-toggler-icon {
+    background-color: rebeccapurple;
+    float: left;
+    margin-top: -942%;
+    margin-left: -124%;
+  }
+
+  .container {
+    margin: 0;
+    height: 150px;
+  }
+
+  .logo-top {
+    background-color: teal;
+    padding-top: 8%;
+    padding-bottom: 8%;
+  }
+
+  .email-top, .phone-top, .login-button,
+  .language-button, .social-networking, .widgets, hr, .carousel img {
+    visibility: hidden;
+  }
+
+  .icon-search {
+    margin-top: -80%;
+    font-size: 26px;
+    color: black;
+  }
+
+  .jumbotron {
+    margin: 0;
+    width: 435px;
+  }
+
+  .sale-back {
+    padding-bottom: 14%;
+  }
+
+  .hotel-tab {
+    width: 106px;
+    margin-top: 38%;
+  }
+
+  .first-page-cards {
+    margin-top: 250%;
+  }
+
+  .page-header h1 {
+    margin-bottom: 11%;
+  }
+
+  .explore-button {
+    margin: 0;
+  }
+
+  .carousel {
+    margin-top: 18%;
+    margin-right: 68%;
+  }
+
+  .booking {
+    margin-left: 20%;
+    margin-top: 10%;
+  }
+
+  .book-options {
+    max-width: 150px;
+  }
+
+  .search-book {
+    width: 82%;
+    margin-left: -12%;
+  }
+
+
 }
